# MetaGenePipe

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.rst  bibliography.html  citation.html  contributing.html  cromslurm.conf  extension.html  fastq_input.txt  fq.txt  fq_input.txt  genindex.html  hmmerDomParser.pl  i.txt  index.html  input.txt  inputMaker.pl  input_file.txt  installation.html  merged_reads_cont.fq  metaGenPipe.config  metaGenPipe.def  metaGenPipe.json  metaGenPipe.options.json  metaGenPipe.wdl  metaGenePipe.config  metaGenePipe.def  metaGenePipe.json  metaGenePipe.options.json  metaGenePipe.wdl  objects.inv  paper.md  preprint-metadata.md  preprint.sh  preprint.tex  run  run_command  (+7 more)
.doctrees/: bibliography.doctree  citation.doctree  contributing.doctree  environment.pickle  extension.doctree  index.doctree  installation.doctree  usage.doctree  workflow.doctree
_sources/: bibliography.rst.txt  citation.md.txt  citation.rst.txt  extension.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt  workflow.rst.txt
docs/: autodocs.sh  conf.py  index.rst  installation.md  installation.rst  pyproject.toml  refs.bib  workflow.rst
kegg/: swissprot.dmnd
output/: MergeDataset.combined.trimmed_R1.fastq  MergeDataset.combined.trimmed_R1.megahit.final.contigs.fa  MergeDataset.combined.trimmed_R1.megahit.final.contigs.fa.scaffold.parsed  MergeDataset.combined.trimmed_R2.fastq  MergeDataset.prodgial.genes.fa  MergeDataset.prodigal.nucl.genes.fa  MergeDataset.prodigal.potential_genes.fa  MergeDataset.prodigal.proteins.fa  MergeDataset.xml  (+2 more)
(+75 files in other folders)
