[tool.poetry]
name = "MetaGenePipe Docs"
version = "1.0.0"
description = ""
authors = ["Babak Shaban, Maria del Mar Quiroga, Edoardo Tescari, Robert Turnbull, Heroen Verbruggen, Kim-Anh Lê Cao"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7.1"
sphinxcontrib-bibtex = "^2.4.1"
requests = "^2.28.1"
urllib3 = "^1.26.12"

[tool.poetry.dev-dependencies]
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.2"
sphinx-copybutton = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
